# planar-monocular-slam

./: .clang-format  .clangd  .gitignore  .pre-commit-config.yaml  INSTRUCTIONS.md  README.md  pixi.toml  pyproject.toml
data/: README.md
docs/: INSTRUCTIONS.md  TODO.md  index.html
docs/stats/: stats_000.json  stats_001.json  stats_002.json  stats_003.json  stats_004.json  stats_005.json  stats_006.json  stats_007.json  stats_008.json  stats_009.json  stats_010.json  stats_011.json  stats_012.json  stats_013.json  stats_014.json  stats_015.json  stats_016.json  stats_017.json  stats_018.json  stats_019.json  stats_020.json  stats_021.json  stats_022.json  stats_023.json  stats_024.json  stats_025.json  stats_026.json  stats_027.json  stats_028.json  stats_029.json  stats_030.json  stats_031.json  stats_032.json  stats_033.json  stats_034.json  stats_035.json  stats_036.json  stats_037.json
pms/: CMakeLists.txt  pixi.toml
pms/include/pms/: bundle_adjustment.h  dataset.h  solution.h  triangulation.h  utils.h
pms/include/pms/camera/: camera.h  triangulation.h
pms/include/pms/dataset/: dataset.h  trajectory_point.h
pms/include/pms/math/: angle.h  arithmetic.h  definitions.h  pose2.h  pose3.h  rotation_matrix.h
pms/include/pms/optimization/: bundle_adjuster.h  constraints.h  manifold.h  pose_landmark_constraint.h  pose_pose_constraint.h  state.h
pms/include/pms/types/: camera.h  landmark.h  measurement.h  solution.h  trajectory_point.h
pms/src/: bindings.cpp  dataset.cpp
pms/src/camera/: camera.cpp  triangulation.cpp
pms/src/dataset/: dataset.cpp
pms/src/math/: pose2.cpp  pose3.cpp  rotation_matrix.cpp
pms/src/optimization/: bundle_adjuster.cpp  constraints.cpp  manifold.cpp  pose_landmark_constraint.cpp  pose_pose_constraint.cpp  state.cpp
pms/test/: CMakeLists.txt  test_camera.cpp  test_manifolds.cpp  test_state.cpp
pms_py/: evaluation.py  gif_creator.py  main.py  visualization.py
pms_py/utils/: __init__.py  dataset.py  math.py
results/stats/: stats_000.json  stats_002.json  stats_003.json  stats_011.json  stats_012.json  stats_013.json  stats_014.json  stats_015.json  stats_016.json  stats_017.json  stats_018.json  stats_019.json  stats_021.json  stats_023.json  stats_024.json  stats_025.json
rich_example/: __init__.py  utils.py
src/: main.cpp
src/planar_monocular_slam/: __init__.py
src/pms/: CMakeLists.txt
src/pms/include/pms/: utils.h
src/pms/include/pms/camera/: camera.h  triangulation.h
src/pms/include/pms/math/: arithmetic.h  pose3.h
src/pms/include/pms/optimization/: bundle_adjuster.h  manifold.h  pose_pose_constraint.h
src/pms/src/: bindings.cpp
src/pms/src/camera/: triangulation.cpp
src/pms/src/math/: rotation_matrix.cpp
src/pms/src/optimization/: bundle_adjuster.cpp  manifold.cpp  pose_landmark_constraint.cpp  pose_pose_constraint.cpp
src/pms_py/: evaluation.py  gif_creator.py  main.py  visualization.py
test/: visualization.py
