[project]
name = "planar-monocular-slam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "neverorfrog", email = "97flavio.maiorana@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
planar-monocular-slam = "planar_monocular_slam:main"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"
